# nucomp-API

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
site_project/: app.py
site_project/application/dtos/: creation_dto.py  login.py  student_creation_dto.py  student_dto.py  student_login_dto.py  update_dto.py
site_project/application/services/: articles_service.py  coordinator.py  events_service.py  news_service.py  student.py  teacher.py  user_creation.py  user_login.py
site_project/domain/entities/: __init__.py  article.py  base.py  coordinator.py  event.py  news.py  student.py  teacher.py
site_project/domain/repositories/: article_repository.py  coordinator.py  events_repository.py  news_repository.py  student_repository.py  teacher_repository.py
site_project/infra/database/: articles.py  base.py  coordinator.py  events.py  news.py  student.py  teacher.py  user.py
site_project/infra/database/utils/: criation_utils.py
site_project/settings/: authentication_settings.py
site_project/tests/: test_hash.py
site_project/ui/routes/: articles_router.py  base_user.py  coordinator.py  events_router.py  news_router.py  students.py  teacher.py
site_project/ui/routes/utils/: forms.py
site_project/utils/: authentication.py
